CoinGecko price source: Added all fiat currencies